--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
+    "dummy-server": "tsc && node dist/dummy-server.js",
     "start": "tsc && node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,7 +12,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "jsdom": "^26.0.0",
     "puppeteer": "^24.3.0",
     "typescript": "^5.7.3"
+  },
+  "devDependencies": {
+    "@types/body-parser": "^1.19.5",
+    "@types/express": "^5.0.0",
+    "@types/jsdom": "^21.1.7"
   }
 }
